# CubeSat-Communication-Protocol

./: .gitignore  .gitmodules
Cubesat Space Protocol/Named Pipe (FIFO) Routing/src/: main.c
Cubesat Space Protocol/UART transfer test/src/: CMakeLists.txt  DartConfiguration.tcl
Cubesat Space Protocol/UART transfer test/src/client/: CMakeLists.txt  DartConfiguration.tcl
Cubesat Space Protocol/UART transfer test/src/server/: CMakeLists.txt  DartConfiguration.tcl
Cubesat Space Protocol/UART/src/: CMakeLists.txt
Cubesat Space Protocol/UART/src/client/: CMakeLists.txt
Cubesat Space Protocol/UART/src/client/src/: client.c
Cubesat Space Protocol/UART/src/libcsp/: CMakeLists.txt
Cubesat Space Protocol/UART/src/libcsp_old/: CMakeLists.txt
Cubesat Space Protocol/UART/src/server/: CMakeLists.txt
Cubesat Space Protocol/UART/src/server/src/: server.c
Cubesat Space Protocol/UART/src/settings/: settings.h
Cubesat Space Protocol/UART/src/uart_debug/: CMakeLists.txt
Cubesat Space Protocol/UART/src/uart_debug/src/: uart_debug.c
Loris Communication Protocol/: .gitignore  Makefile  toolchain.cmake
Loris Communication Protocol/include/: antenna.h  antenna_encoding.h  antenna_global.h  fifo.h  panic.h
Loris Communication Protocol/rscode-master/: .~lock.text.txt#  Makefile  example  example.c
Loris Communication Protocol/src/: antenna.c  antenna_encoding.c  antenna_test.c  fifo-emulation.c  fifo.c  main.c  rs-test.c
